feat: implement basic analytics
